--- a/src/residencias/Personal.form
+++ b/src/residencias/Personal.form
@@ -297,11 +297,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-<<<<<<< HEAD
           <AbsoluteConstraints x="340" y="710" width="310" height="-1"/>
-=======
-          <AbsoluteConstraints x="70" y="560" width="310" height="-1"/>
->>>>>>> 51be9fabb5f954ae951b72932a37a13d062c2af0
         </Constraint>
       </Constraints>
     </Component>
@@ -363,6 +359,22 @@
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="1260" y="820" width="180" height="70"/>
+        </Constraint>
+      </Constraints>
+    </Component>
+    <Component class="javax.swing.JLabel" name="label_puesto">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="18" style="1"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="4c" green="4c" red="4c" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="PUESTO"/>
+      </Properties>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="70" y="560" width="240" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -600,11 +612,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-<<<<<<< HEAD
           <AbsoluteConstraints x="340" y="740" width="310" height="30"/>
-=======
-          <AbsoluteConstraints x="70" y="590" width="580" height="30"/>
->>>>>>> 51be9fabb5f954ae951b72932a37a13d062c2af0
         </Constraint>
       </Constraints>
     </Component>
@@ -704,7 +712,6 @@
         </Constraint>
       </Constraints>
     </Component>
-<<<<<<< HEAD
     <Component class="javax.swing.JComboBox" name="puesto">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -741,8 +748,6 @@
         </Constraint>
       </Constraints>
     </Component>
-=======
->>>>>>> 51be9fabb5f954ae951b72932a37a13d062c2af0
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
         <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
